documentation for sections II and III

--- a/project/ClassificationAndEvaluation.ipynb
+++ b/project/ClassificationAndEvaluation.ipynb
@@ -536,7 +536,7 @@
     "id": "wEgW4i18VrWZ"
    },
    "source": [
-    "The model consists of three convolution blocks with a max pool layer in each of them. There's a fully connected layer with 512 units on top of it that is activated by a `relu` activation function. The model outputs class probabilities based on binary classification by the `sigmoid` activation function."
+    "The model consists of three convolution blocks with a max pool layer in each of them. There's a fully connected layer with 512 units on top of it that is activated by a `relu` activation function. The model outputs class probabilities based on categorical classification by the `sigmoid` activation function."
    ]
   },
   {
@@ -591,7 +591,7 @@
    "source": [
     "### Compile the model\n",
     "\n",
-    "For this tutorial, choose the *ADAM* optimizer and *binary cross entropy* loss function. To view training and validation accuracy for each training epoch, pass the `metrics` argument."
+    "For this tutorial, choose the *ADAM* optimizer and *categorical cross entropy* loss function. To view training and validation accuracy for each training epoch, pass the `metrics` argument."
    ]
   },
   {
@@ -1472,11 +1472,7 @@
    "metadata": {},
    "source": [
     "## Evaluate the Model\n",
-    "Once you are completely satisfied with your model, evaluate the performance of the model on the test set.\n",
-    "\n",
-    "Be sure to only do this once!\n",
-    "\n",
-    "If you were to measure the performance of your trained model on the test set, then improve your model, and then measure the performance of your model on the test set again, that would invalidate your test results. You wouldn't get a true measure of how well your model would perform against real data."
+    "Once you are completely satisfied with your model, evaluate the performance of the model on the test set. In our case we created a video to check how the whole pipeline works"
    ]
   },
   {
