broken link fixed

--- a/project/ClassificationAndEvaluation.ipynb
+++ b/project/ClassificationAndEvaluation.ipynb
@@ -1472,7 +1472,7 @@
    "metadata": {},
    "source": [
     "## Evaluate the Model\n",
-    "Once you are completely satisfied with your model, evaluate the performance of the model on the test set. In our case we created a video to check how the whole pipeline works"
+    "Once you are completely satisfied with your model, evaluate the performance of the model on the test set. In our case we created a video to check how the whole pipeline works."
    ]
   },
   {
